# wgpu-uniform-repro

./: Cargo.toml  index.html
src/: main.rs  shader.wgsl
