[package]
name = "wgpu-uniform-repro"
version = "0.1.0"
authors = ["Liam Murphy <liampm32@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["Window", "Document", "Element"] }
wgpu = { version = "0.11.0", features = ["webgl"] }
winit = { version = "0.25.0", features = ["web-sys"] }
